--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
     <!-- shopping cart area end -->
 
     <footer>
-        <p>Created By <a href="https://www.youtube.com/channel/UCr4TC9YxsDZwzwIxnZOVlBw">Front End Library</a> | &copy;
+        <p>Created By <a href="https://stockshablonov.com/">StockShablonov.com</a> | &copy;
             2021 All rights reserved</p>
     </footer>
 
